# httpc

./: .gitignore  README.md  pyproject.toml
src/httpc/: __init__.py  __main__.py  _api.py  _base.py  _broadcaster.py  _cache_api.py  _cache_api.pyi  _client.py  _css.py  _next_data.py  _options.py  _parse.py  cookie_utils.py
src/httpc/catcher/: __init__.py  _catcher.py  _db.py
tests/: test_base.py  test_broadcaster.py  test_css.py  test_db.py  test_next_data.py
tests/resources/: next_data.txt  response.pickle
