[project]
name = "httpc"
authors = [
    {name = "ilotoki0804", email = "ilotoki0804@gmail.com"},
]
description = "httpx with css."
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["httpx", "request", "css", "soup", "selectolax"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "selectolax>=0.3.21",
    "httpx>=0.27.2",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "W", "B"]
ignore = ["E501", "F401", "E999", "F405", "F403", "E402", "S101", "F841"]

[tool.hatch.version]
path = "src/httpc/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/httpc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
